--- a/index.html
+++ b/index.html
@@ -127,6 +127,21 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Future Challenges of AI</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-5">Computing Power
+                  <script language="javascript">
+            function respond() {
+				mbr-text mbr-fonts-style display-5 = document.getElementById("mbr-text mbr-fonts-style display-5");
+				if (document.body.className == "white") {
+					document.body.className = "pink";
+					mbr-text mbr-fonts-style display-5.className = "white mystery";
+					heading.innerHTML = ""
+				} else {
+					document.body.className = "white";
+					mbr-text mbr-fonts-style display-5.className = "pink";
+					heading = document.getElementById("heading");
+					heading.innerHTML = "<a href='mailto:gothards@uscupstate.edu'>Email me</a> with questions.</a>"
+				}
+			}
+        </script>
 <br>Lack of Trust
 <br>Overcoming Humanity
 <br>Bias Can Leak in&nbsp;<br></p>
