--- a/index.html
+++ b/index.html
@@ -33,19 +33,7 @@
     <div class="container">
         <div class="row">
             <div class="content-wrap">
-                <h1 id="titleline"><strong>Artificial Intelligence</strong></h1>
-              <style> 
-                .bigger {
-                  font-size: 2.5em;
-                }
-              </style>
-              <script language="JavaScript">
-    function changeStuff() {
-        titleLine = document.getElementById("titleline");
-        titleLine.className = "bigger";
-    }
-</script>
-                <button onclick="javascript:changeStuff()">Click Here</button>
+              <h1 class=""mbr-section-title mbr-fonts-style mb-3 display-1"><strong>Artificial Intelligence</strong></h1>
               
                 <p class="mbr-fonts-style mbr-text mbr-white mb-3 display-7">The Future</p>
 
