--- a/index.html
+++ b/index.html
@@ -52,7 +52,26 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
-                <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>What is Artificial Intelligence?</strong></h1>
+                <h1 id="title-line"><strong>What is Artificial Intelligence?</strong></h1>
+                                  <style>
+    .bigger {
+        font-size: 2.5em;
+    }
+</style>
+                                  <script language="JavaScript">
+    function changeStuff() {
+        titleLine = document.getElementById("title-line");
+        titleLine.className = "bigger";
+   function clearChange() {
+		thingToChange = document.getElementById("title-line");
+		thingToChange.className = "bigger";
+    }
+ 
+	}
+
+	<p id="title-line">stuff</p>
+	<button onclick="javascript:changeStuff()">Click Here</button>
+	<button onclick="javascript:clearChange()">Undo Here</button>
                 
                 <p class="mbr-text mbr-fonts-style display-7"><strong>Artificial Intelligence is a series of systems that attempt to model human intelligence.&nbsp;&nbsp;</strong><br></p>
                 
