--- a/index.html
+++ b/index.html
@@ -52,26 +52,24 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
-                <h1 id="title-line"><strong>What is Artificial Intelligence?</strong></h1>
-                                  <style>
-    .bigger {
-        font-size: 2.5em;
-    }
-</style>
-                                  <script language="JavaScript">
+          <h1 id="titleline"><strong>Artificial Intelligence</strong></h1>
+              <style> 
+	.blue {
+		background-color: blue;
+        }
+              </style>
+              <script language="JavaScript">
     function changeStuff() {
-        titleLine = document.getElementById("title-line");
-        titleLine.className = "bigger";
-   function clearChange() {
-		thingToChange = document.getElementById("title-line");
-		thingToChange.className = "bigger";
+        titleLine = document.getElementById("titleLine");
+        titleLine.className = "blue";
+function clearChange() {
+		titleLine = document.getElementById("titleLine");
+	titleLine.className = "blue";
     }
- 
-	}
+</script>
+                <button onclick="javascript:changeStuff()">CLick Here</button>
+		<button onclick="javascript:clearChange()">Undo Here</button>			  
 
-	<p id="title-line">stuff</p>
-	<button onclick="javascript:changeStuff()">Click Here</button>
-	<button onclick="javascript:clearChange()">Undo Here</button>
                 
                 <p class="mbr-text mbr-fonts-style display-7"><strong>Artificial Intelligence is a series of systems that attempt to model human intelligence.&nbsp;&nbsp;</strong><br></p>
                 
