--- a/index.html
+++ b/index.html
@@ -54,17 +54,17 @@
             <div class="col-12 col-lg-8">
           <h1 id="titleline"><strong>Artificial Intelligence</strong></h1>
               <style> 
-	.blue {
-		background-color: blue;
+	.bigger {
+        font-size: 2.5em;
         }
               </style>
               <script language="JavaScript">
     function changeStuff() {
         titleLine = document.getElementById("titleLine");
-        titleLine.className = "blue";
+        titleLine.className = "bigger";
 function clearChange() {
 		titleLine = document.getElementById("titleLine");
-	titleLine.className = "blue";
+	titleLine.className = "bigger";
     }
 </script>
                 <button onclick="javascript:changeStuff()">CLick Here</button>
