--- a/index.html
+++ b/index.html
@@ -52,22 +52,23 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
-          <h1 id="titleline"><strong>Artificial Intelligence</strong></h1>
-              <style> 
-	.bigger {
-        font-size: 2.5em;
+          <h1 id="titleline" class="blue"><strong>Artificial Intelligence</strong></h1>
+           
+	<style>
+	.blue {
+		background-color: blue;
         }
-              </style>
+</style> 
               <script language="JavaScript">
     function changeStuff() {
         titleLine = document.getElementById("titleLine");
-        titleLine.className = "bigger";
+        titleLine.className = "blue";
 function clearChange() {
 		titleLine = document.getElementById("titleLine");
-	titleLine.className = "bigger";
+	titleLine.className = "blue";
     }
-</script>
-                <button onclick="javascript:changeStuff()">CLick Here</button>
+</script>				      
+                <button onclick="javascript:changeStuff()">Click Here</button>
 		<button onclick="javascript:clearChange()">Undo Here</button>			  
 
                 
