--- a/index.html
+++ b/index.html
@@ -65,12 +65,12 @@
         titleLine.className = "blue";
 function clearChange() {
 		titleLine = document.getElementById("titleLine");
-	titleLine.className = "blue";
-    }				      
+	titleLine.className = "";
+    }			 </script>    
+
                 <button onclick="javascript:changeStuff()">Click Here</button>
 		<button onclick="javascript:clearChange()">Undo Here</button>			  
 
-							  </script>    
                 <p class="mbr-text mbr-fonts-style display-7"><strong>Artificial Intelligence is a series of systems that attempt to model human intelligence.&nbsp;&nbsp;</strong><br></p>
                 
             </div>
