--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="align-center container">
         <div class="row justify-content-center">
             <div class="col-12 col-lg-8">
-          <h1 id="titleline" class="blue"><strong>Artificial Intelligence</strong></h1>
+          <h1 id="titleline" class="blue"><strong>What is Artificial Intelligence?</strong></h1>
            
 	<style>
 	.blue {
