--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 <h1 class="mbr-section-title mbr-fonts-style mb-3 display-1"><strong>What is Artificial Intelligence?</strong></h1>
                 
                 <p class="mbr-text mbr-fonts-style display-7"><strong>Artificial Intelligence is a series of systems that attempt to model human intelligence.&nbsp;&nbsp;</strong><br></p>
-                <div class="mbr-section-btn mt-3"><a class="btn btn-black-outline display-7" href="page1.html#top">Click Here</a></div>
+                <div class="mbr-section-btn mt-3"><a class="btn btn-black-outline display-7" href="page1.html#header4-s">Click Here</a></div>
             </div>
         </div>
     </div>
@@ -154,7 +154,7 @@
             </div>
         </div>
     </div>
-</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/b" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;">Mobirise web page maker - <a href="https://mobirise.site/p" style="color:#aaa;">Visit site</a></p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
+</section><section style="background-color: #fff; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Helvetica Neue', Arial, sans-serif; color:#aaa; font-size:12px; padding: 0; align-items: center; display: flex;"><a href="https://mobirise.site/a" style="flex: 1 1; height: 3rem; padding-left: 1rem;"></a><p style="flex: 0 0 auto; margin:0; padding-right:1rem;"><a href="https://mobirise.site/q" style="color:#aaa;">This site</a> was designed with Mobirise site themes</p></section><script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>  <script src="assets/parallax/jarallax.js"></script>  <script src="assets/smoothscroll/smooth-scroll.js"></script>  <script src="assets/ytplayer/index.js"></script>  <script src="assets/theme/js/script.js"></script>  
   
   
 </body>
